[package]
name = "mystic_draw"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# UI libraries
iced = "0.4.0"
iced_native = "0.5.1"

# Used for determining platform specfic directories
directories = "4.0.1"

# used for native file dialogs
rfd = "0.8.1"

# used to enumerate files 
walkdir = "2"

# probably useful for working with gtk to replace Rc:RefCell
once_cell = "1.9.0"

# Used to open urls
open = "2.1.1"

crc32fast = "1.3.2"