[package]
name = "mystic_draw"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
bevy = "0.8"
bevy_egui = "0.16.1"
serde = { version = "1", features = ["derive"], optional = true }
egui_extras = "0.19.0"

[features]
default = []
